--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import '@ctrl/ngx-emoji-mart/picker';
 /* Global Styles */
 * {
 	box-sizing: border-box;
